hphp/hack/test/typecheck/case_sensitive_inheritance2.php.legacy_decl.exp
File "case_sensitive_inheritance2.php", line 10, characters 16-16:
`C` inherited two versions of the method `FOO` whose names differ only by case. (Typing[4393])
  File "case_sensitive_inheritance2.php", line 6, characters 19-21:
  It inherited `FOO` from I2 here.
  File "case_sensitive_inheritance2.php", line 3, characters 19-21:
  And `foo` from I1 here. Please rename these methods to the same casing.
